--- a/src/app/index.css
+++ b/src/app/index.css
@@ -208,7 +208,7 @@ padding:0!important;
 }
 
 .house-img {
-  background: url('../../assets/images/claim-houses.png') center / auto 127px no-repeat;
+  background: url('https://github.com/cary-gaskell/claim-advisor-ui/blob/master/src/assets/images/claim-houses.png?raw=true') center / auto 127px no-repeat;
   margin-top: 2.5em;
   height: 220px;
   overflow: visible;
@@ -248,4 +248,58 @@ padding:0!important;
   position: relative;
   font-weight: 500;
 
+}
+.autocomplete {
+  position: relative;
+  margin: 0 auto;
+  color: black;
+  text-shadow: none;
+}
+.od-place-autocomplete {
+  bottom: 200px;
+  z-index: 2;
+  left: 25px;
+  right:25px;
+  background: #ffffff;
+  border-radius: 3px;
+  max-width: 800px;
+}
+.od-place-autocomplete.with-button input {
+  border: 1px solid #2ba8de;
+  display: inline-block;
+  width: 100%;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 15px 20px;
+  background: none;
+  border-radius: 3px;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: relative;
+  overflow: hidden;
+  -webkit-transition-property: color, border-radius;
+  transition-property: color, border-radius;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  z-index: 1;
+}
+
+.od-place-autocomplete.with-button .button.submit,
+.od-place-autocomplete.with-button .button.submit:hover{
+  background-color: transparent;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  left: 0;
+  top: 0;
+  text-align: right;
+  vertical-align: middle;
+  color: #2ba8de;
+  border-radius: 0;
+  padding-top: 17px;
+  font-size: 12px;
 }
