--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -2,7 +2,7 @@
     <!--<acme-navbar creation-date="main.creationDate"></acme-navbar>-->
 <div class="row">
   <div class="jumbotron text-center claim-hero" style="color:#fff;">
-    <img class="img-responsive" src="../../../assets/images/flood_insurance.jpg" style="opacity: 0.8;"/>
+    <img class="img-responsive" src="https://github.com/cary-gaskell/claim-advisor-ui/blob/master/src/assets/images/flood_insurance1.jpg?raw=true" style="opacity: 0.8;"/>
     <div class="claim-hero-title">
       <h1 style="font-size: 50px;">
         We make settling a claim<acme-malarkey extra-values="['better', 'faster', 'easier','transparent','accurate','peaceful']"></acme-malarkey> 
@@ -10,6 +10,12 @@
       <span></span>
       <p>Providing People &amp; Companies With The Best Way To Settle Claims</p>
 
+    </div>
+
+    <div class="od-place-autocomplete autocomplete with-button">
+      <input type="text" ng-model="query" placeholder="Enter your home address">
+      <a href="#" ng-click="fire()" class="od-xhr-progress button submit white ng-binding">
+        ← Get your free offer today</a>
     </div>
   </div>
 </div>
@@ -122,7 +128,7 @@
 <div class="row">
     <div class="col-xs-12">
     <!--<div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3 ">-->
-      <img class="img-responsive center-block" src="../../../assets/images/opendoor.jpg" style="opacity: 0.8; margin-bottom:20px;"/>
+      <img class="img-responsive center-block" src="https://github.com/cary-gaskell/claim-advisor-ui/blob/master/src/assets/images/opendoor.jpg?raw=true" style="opacity: 0.8; margin-bottom:20px;"/>
     </div>
   </div>
     <!--<button class="button" type="button" style=" margin-top:50px; margin-left:620px; margin-bottom: 20px;">Learn How →</button> -->
