--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -2,9 +2,9 @@
     <!--<acme-navbar creation-date="main.creationDate"></acme-navbar>-->
 <div class="row">
   <div class="jumbotron text-center claim-hero" style="color:#fff;">
-    <img class="img-responsive" src="https://github.com/cary-gaskell/claim-advisor-ui/blob/master/src/assets/images/flood_insurance1.jpg?raw=true" style="opacity: 0.8;"/>
+    <img class="img-responsive" src="https://github.com/cary-gaskell/claim-advisor-ui/blob/master/src/assets/images/flood_insurance2.jpg?raw=true" style="opacity: 0.8;"/>
     <div class="claim-hero-title">
-      <h1 style="font-size: 50px;">
+      <h1 class="m-b-0 fs-50">
         We make settling a claim<acme-malarkey extra-values="['better', 'faster', 'easier','transparent','accurate','peaceful']"></acme-malarkey> 
       </h1><br/>
       <span></span>
