--- a/src/app/index.css
+++ b/src/app/index.css
@@ -11,6 +11,9 @@ html, body{
 .m-t-25 {
   margin-top:25px;
 }
+.m-b-0 {
+  margin-bottom:0;
+}
 .m-t-45 {
   margin-top:45px;
 }
@@ -18,6 +21,9 @@ html, body{
   padding-top:25px;
 }
 
+.fs-50 {
+  font-size:50px;
+}
 .c-blue {
   color: #002244!important;
 }
@@ -256,7 +262,7 @@ padding:0!important;
   text-shadow: none;
 }
 .od-place-autocomplete {
-  bottom: 200px;
+  bottom: 95px;
   z-index: 2;
   left: 25px;
   right:25px;
