--- a/src/app/index.css
+++ b/src/app/index.css
@@ -271,41 +271,42 @@ padding:0!important;
   max-width: 800px;
 }
 .od-place-autocomplete.with-button input {
-  border: 1px solid #2ba8de;
-  display: inline-block;
-  width: 100%;
-  font-weight: 500;
-  font-size: 14px;
-  padding: 15px 20px;
-  background: none;
-  border-radius: 3px;
-  vertical-align: middle;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  position: relative;
-  overflow: hidden;
-  -webkit-transition-property: color, border-radius;
-  transition-property: color, border-radius;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
+  height: 50px!important;
+  border: 1px solid #2ba8de!important;
+  display: inline-block!important;
+  width: 100%!important;
+  font-weight: 500!important;
+  font-size: 14px!important;
+  padding: 15px 20px!important;
+  background: none!important;
+  border-radius: 3px!important;
+  vertical-align: middle!important;
+  -webkit-transform: translateZ(0)!important;
+  transform: translateZ(0)!important;
+  -webkit-backface-visibility: hidden!important;
+  backface-visibility: hidden!important;
+  position: relative!important;
+  overflow: hidden!important;
+  -webkit-transition-property: color, border-radius!important;
+  transition-property: color, border-radius!important;
+  -webkit-transition-duration: 0.3s!important;
+  transition-duration: 0.3s!important;
   z-index: 1;
 }
 
 .od-place-autocomplete.with-button .button.submit,
 .od-place-autocomplete.with-button .button.submit:hover{
-  background-color: transparent;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  left: 0;
-  top: 0;
-  text-align: right;
-  vertical-align: middle;
-  color: #2ba8de;
-  border-radius: 0;
-  padding-top: 17px;
-  font-size: 12px;
+  background-color: transparent!important;
+  position: absolute!important;
+  width: 100%!important;
+  height: 100%!important;
+  overflow: hidden!important;
+  left: 0!important;
+  top: 0!important;
+  text-align: right!important;
+  vertical-align: middle!important;
+  color: #2ba8de!important;
+  border-radius: 0!important;
+  padding-top: 17px!important;
+  font-size: 12px!important;
 }
