--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -61,8 +61,7 @@
 
             <div class="col-sm-2 col-md-4">
                 <div class="widget clearfix">
-                    <h4 class="tc">Follow Us on Twitter</h4>
-                    <div id="instagram-photos" class="instagram-photos masonry-thumbs col-5" data-user="269801886" data-count="10" data-type="tag"></div>
+                    <a href="#" class="button button-rounded button-large button-border"><span>Schedule your claim</span></a>
                 </div>
             </div>
 
