--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -4,8 +4,9 @@
   <div class="jumbotron text-center claim-hero" style="color:#fff; margin-bottom:0;">
     <img class="img-responsive" src="https://github.com/cary-gaskell/claim-advisor-ui/blob/master/src/assets/images/flood_insurance2.jpg?raw=true" style="opacity: 0.8;"/>
     <div class="claim-hero-title">
+
       <h1 class="m-b-0 fs-50">
-        We make settling a claim<acme-malarkey extra-values="['better', 'faster', 'easier','transparent','accurate','peaceful']"></acme-malarkey> 
+        We believe in a <acme-malarkey extra-values="['better','easier','transparent','accurate','peaceful']"></acme-malarkey> claim experience
       </h1><br/>
       <span></span>
       <p>Providing People &amp; Companies With The Best Way To Settle Claims</p>
