--- a/src/app/index.css
+++ b/src/app/index.css
@@ -298,10 +298,10 @@ padding:0!important;
 .od-place-autocomplete.with-button .button.submit:hover{
   background-color: transparent!important;
   position: absolute!important;
-  width: 100%!important;
+  width: 221px!important;
   height: 100%!important;
   overflow: hidden!important;
-  left: 0!important;
+  right: 0!important;
   top: 0!important;
   text-align: right!important;
   vertical-align: middle!important;
@@ -309,4 +309,6 @@ padding:0!important;
   border-radius: 0!important;
   padding-top: 17px!important;
   font-size: 12px!important;
+  z-index: 3;
+  cursor: pointer;
 }
