--- a/src/app/contact/contact.html
+++ b/src/app/contact/contact.html
@@ -68,10 +68,10 @@
                         <label for="template-contactform-service">Services</label>
                         <select id="template-contactform-service" name="template-contactform-service" class="sm-form-control">
                             <option value="">-- Select One --</option>
-                            <option value="Wordpress">Wordpress</option>
-                            <option value="PHP / MySQL">PHP / MySQL</option>
-                            <option value="HTML5 / CSS3">HTML5 / CSS3</option>
-                            <option value="Graphic Design">Graphic Design</option>
+                            <option value="Wordpress">Option 1</option>
+                            <option value="PHP / MySQL">Option 2</option>
+                            <option value="HTML5 / CSS3">Option 3</option>
+                            <option value="Graphic Design">Option 4</option>
                         </select>
                     </div>
 
