--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -85,7 +85,7 @@
       <div class="col-md-7 quote-square cursor">
         <div class="ipost clearfix">
           <section id="content">
-              <iframe width="560" height="315" src="http://www.youtube.com/embed/SZEflIVnhH8" frameborder="0" allowfullscreen></iframe>  
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/SZEflIVnhH8" frameborder="0" allowfullscreen></iframe>
           </section>
           <div class="entry-title">
             <h3 style="font-weight:300; font-style: italic;">"Claim Advisor’s Public Adjusters are specialists to say the least. They helped me understand what my policy covered and they fought for me. They are very knowledgeable and kept me in the loop when navigating through my policy and negotiating with the insurance company. I really believe that our final settlement was much better than it would have been had they not been involved. I would highly recommend them to anyone in need.”</h3>
